# codeartifact_cleanup

./: LICENSE  README.md  codeartifact_cleanup.py  pyproject.toml
